--- a/src/integration/rtl/caliptra_reg.rdl
+++ b/src/integration/rtl/caliptra_reg.rdl
@@ -38,6 +38,8 @@ addrmap clp {
 
     entropy_src entropy_src_reg @ 0x2000_3000;
 
+    I3CCSR i3c_reg @ 0x2000_4000;
+
     mem {name="Mailbox SRAM";
          desc="Mailbox SRAM for Caliptra direct-mode accesses. Accessible to Caliptra only after acquiring mbox_lock.
                [br]Caliptra Access: RW
