--- a/src/soc_ifc/rtl/soc_ifc_external_reg.rdl
+++ b/src/soc_ifc/rtl/soc_ifc_external_reg.rdl
@@ -28,7 +28,8 @@ reg {
     rw_rw_sticky_hw dccm_ecc_unc=0;     /* Uncorrectable double-bit error in DCCM */
     rw_rw_sticky_hw nmi_pin=0;          /* Non-Maskable Interrupt due to WDT timeout */
     rw_rw_sticky_hw crypto_err=0;       /* Crypto parallel operation error No Mask */ 
-    field {sw=r; hw=w;} rsvd[28]=28'h0;
+    rw_rw_sticky_hw dcls_error=0;       /* Non-Maskable DCLS error */
+    field {sw=r; hw=w;} rsvd[27]=27'h0;
 } CPTRA_HW_ERROR_FATAL;
 reg {
     name = "Hardware Error Non-Fatal";
